Fix footest spacing

--- a/style.css
+++ b/style.css
@@ -239,4 +239,6 @@ li.fake-section-title {
 .footest {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  margin: 0 auto;
 }
